# Brain-Tumor-Detection-Using-U-Net-Attention-U-Net-and-BiFPN

./: .brisc_progress.json  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  infer.py  main.py  pyproject.toml  requirements.txt  run_infer.py  run_train.py  run_train_and_infer.ps1  setup.py  train.py  visualize.py
report/: summary.csv
report/attunet/cls/: final_results.csv  log.csv
report/attunet/joint/: final_results.csv  log.csv
report/attunet/seg/: final_results.csv  log.csv
report/bifpn/cls/: final_results.csv  log.csv
report/bifpn/joint/: final_results.csv  log.csv
report/bifpn/seg/: final_results.csv  log.csv
report/unet/cls/: final_results.csv  log.csv
report/unet/joint/: final_results.csv  log.csv
report/unet/seg/: final_results.csv  log.csv
scripts/: check_torch_version.py  run_all.ps1
src/: __init__.py  config.py
src/data/: __init__.py  dataset.py  datasets.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  att_unet.py  attention_unet.py  bifpn.py  bifpn_unet.py  components.py  losses.py  metrics.py  unet.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  augment.py  checkpoint.py  export.py  logging.py  misc.py  plotting.py  report_utils.py  reporting.py  transforms.py  visualization.py  visualize.py
tests/: __init__.py  conftest.py  test_config.py  test_losses.py  test_metrics.py  test_models.py
